--- a/Project/.classpath
+++ b/Project/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opennlp-tools"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache OpenNLP"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
