--- a/Project/.classpath
+++ b/Project/.classpath
@@ -7,6 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opennlp-tools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache OpenNLP"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Log 4j"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
